    - DataGenerator system allows now to add new data generators during data-gen-ing
    - MDK can access now versions from an launcher instance
    - MDK is now capable of building the mod into one final zipfile
    - added data generators for more stuff
    - improved crafting system
    - added FallingBlockEntity
    - IFallingBlock is now based around an entity instead of an simple block
    - added data generator for language files

    fixed issues:
        - IHorizontalOrientableBlock was behaving incorrectly

        from previous release:
            - ItemAtlas was baking some item images in some cases not correctly

        long term issues:
            - Entity.tick() was never called
            - command entry for blocks was not accepting air


changelog of a1.0.0: (excluding the changes from the snapshots below)
    Rendering:
        - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory
        - improved entity model rendering code

    Modding:
        - added possibility to register an event name for execution on mod bus on reload
        - improved reload system
        - added api management system
        - added MDK system

    Gameplay:
        - blocks can now have no collision with the player

    Blocks:
        - added nether portal block

    Commands:
        - /fill command will now update blocks at the end, not at the start
        - /setblock command will now not update the block itself

    World:
        - World.get_dimension() accepts now the dimension name, not only the id

    Saves:
        - player data of saves contains now an special region for dimension stuff
        - added data fixer part for player data

    fixed issues:
        from previous snapshot:
            - alpha rendering for blocks was broken
            - RenderingHelper's alpha on/off functions were not working

        from development versions for a1.1.0: