@@ -1249,3 +1249,6 @@ sstarted these clone on 12th of July, 2019
 [uuk]: fixed Entity's tick() function not being called (issue 240)
 [uuk]: fixed block entries in commands not accepting air (issue 241)
 [uuk]: added language file data generator
+[uuk]: changed how the game is launching itself
+[uuk]: blocks are now not registered via @G.registry
+[uuk]: reworked a lot of events
